WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180506
ServiceWorker Inspector: Should be able to see image content from CacheStorage.add(url) network request
https://bugs.webkit.org/show_bug.cgi?id=180506
Summary
ServiceWorker Inspector: Should be able to see image content from CacheStorag...
Joseph Pecoraro
Reported
2017-12-06 14:09:11 PST
Should be able to see image content from CacheStorage.add(url) network request Steps to Reproduce: 1. Inspect ServiceWorker on <
https://mdn.github.io/sw-test/
> 2. Show Network Tab 3. js> caches.open("v1").then((cache) => { cache.add("/sw-test/star-wars-logo.jpg") }); 4. Select Network Table entry for star-wars-logo to show resource preview => Error message screen instead of image Notes: - Network.getResponseBody has no data - There is no CachedResource on the Worker - The data wasn't buffered in NetworkResourceData Lets make the data buffer in NetworkResourceData for workers so we are guaranteed data.
Attachments
[PATCH] Proposed Fix
(7.70 KB, patch)
2017-12-06 14:11 PST
,
Joseph Pecoraro
bburg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2017-12-06 14:11:32 PST
Created
attachment 328626
[details]
[PATCH] Proposed Fix
Blaze Burg
Comment 2
2017-12-08 14:40:57 PST
Comment on
attachment 328626
[details]
[PATCH] Proposed Fix r=me
Joseph Pecoraro
Comment 3
2017-12-08 14:58:06 PST
<
https://trac.webkit.org/r225708
>
Radar WebKit Bug Importer
Comment 4
2017-12-08 14:59:18 PST
<
rdar://problem/35944628
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug