ServiceWorker Inspector: Should be able to see image content from CacheStorage.add(url) network request https://bugs.webkit.org/show_bug.cgi?id=180506

Reviewed by Brian Burg.

No test as this only happens inside a ServiceWorker inspector which
we don't yet have a way to test. In a Page Inspector, the
CacheStorage.add network request already behaves as expected.

* inspector/NetworkResourcesData.cpp:
(WebCore::NetworkResourcesData::responseReceived):
(WebCore::shouldBufferResourceData):
* inspector/NetworkResourcesData.h:
(WebCore::NetworkResourcesData::ResourceData::forceBufferData const):
(WebCore::NetworkResourcesData::ResourceData::setForceBufferData):
Provide a way to force buffering in NetworkResourceData.

* inspector/agents/InspectorNetworkAgent.cpp:
(WebCore::InspectorNetworkAgent::didReceiveResponse):
* inspector/agents/InspectorNetworkAgent.h:
* inspector/agents/page/PageNetworkAgent.h:
* inspector/agents/worker/WorkerNetworkAgent.h:
Enable force buffering in a Worker Network Agent.

Canonical link: https://commits.webkit.org/196524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225708 268f45cc-cd09-0410-ab3c-d52691b4dbfc